discussion/kv_engine/141636/141636_rev46_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 04:48:26.000000000
Message: 
Uploaded patch set 46: Patch Set 45 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 07:34:03.000000000
Message: 
Patch Set 46: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36715/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36715/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9752/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9752/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11475/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.TlsProperties/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp
[2021-06-11T05:18:42.330Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp/testapp_interfaces.cc:301: Failure
[2021-06-11T05:18:42.330Z] Value of: rsp.isSuccess()
[2021-06-11T05:18:42.330Z]   Actual: false
[2021-06-11T05:18:42.330Z] Expected: true
[2021-06-11T05:18:42.330Z] Internal error
[2021-06-11T05:18:42.330Z] {"error":{"context":"TLS configuration must contain \"password\" which must be a string"}}
[2021-06-11T05:18:42.330Z] [  FAILED  ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp, where GetParam() = Mcbp (3 ms)
TransportProtocols/InterfacesTest.TlsProperties/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11475/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11475/ )

Test exceeded the timeout:
[2021-06-11T05:18:37.701Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11475/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10399/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.TlsProperties/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp
[2021-06-11T05:03:49.875Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp/testapp_interfaces.cc:301: Failure
[2021-06-11T05:03:49.875Z] Value of: rsp.isSuccess()
[2021-06-11T05:03:49.875Z]   Actual: false
[2021-06-11T05:03:49.875Z] Expected: true
[2021-06-11T05:03:49.875Z] Internal error
[2021-06-11T05:03:49.875Z] {"error":{"context":"TLS configuration must contain \"password\" which must be a string"}}
[2021-06-11T05:03:49.875Z] [  FAILED  ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp, where GetParam() = Mcbp (1 ms)
TransportProtocols/InterfacesTest.TlsProperties/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11327/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.TlsProperties/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp
[2021-06-11T05:57:03.964Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_interfaces.cc:301: Failure
[2021-06-11T05:57:03.964Z] Value of: rsp.isSuccess()
[2021-06-11T05:57:03.964Z]   Actual: false
[2021-06-11T05:57:03.964Z] Expected: true
[2021-06-11T05:57:03.964Z] Internal error
[2021-06-11T05:57:03.964Z] {"error":{"context":"TLS configuration must contain \"password\" which must be a string"}}
[2021-06-11T05:57:03.964Z] [  FAILED  ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp, where GetParam() = Mcbp (1 ms)
TransportProtocols/InterfacesTest.TlsProperties/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11327/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11327/ )

Test exceeded the timeout:
[2021-06-11T05:56:23.092Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11327/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19330/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11752/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.TlsProperties/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp
[2021-06-11T05:33:13.471Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_interfaces.cc:301: Failure
[2021-06-11T05:33:13.471Z] Value of: rsp.isSuccess()
[2021-06-11T05:33:13.471Z]   Actual: false
[2021-06-11T05:33:13.471Z] Expected: true
[2021-06-11T05:33:13.471Z] Internal error
[2021-06-11T05:33:13.471Z] {"error":{"context":"TLS configuration must contain \"password\" which must be a string"}}
[2021-06-11T05:33:13.471Z] [  FAILED  ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp, where GetParam() = Mcbp (9 ms)
TransportProtocols/InterfacesTest.TlsProperties/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11752/ )

ThreadSanitizer issue: use of an invalid mutex (e.g. uninitialized or destroyed) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11752/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8347/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/277/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31382/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
